add allure report

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --reporter mochawesome"
+    "test": "mocha --reporter mochawesome",
+    "allure-test": "mocha --reporter mocha-allure-reporter"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
+    "mocha-allure-reporter": "^1.4.0",
     "mochawesome": "^4.1.0"
   }
 }
